# pytest-modern

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml  test-sample.yaml  test.yaml
pytest_modern/: __init__.py  benchmark_report.py  coverage_report.py  header.py  plugin.py  terminal.py  traceback.py
tests/: test_benchmark.py  test_example.py
